adding proxy to package.json?

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "monch bday website server",
 	"main": "server.js",
+	"proxy": "http://localhost:5173",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon server.js",
